test/negative/clafertransitionconstraint08.cfr
// Test for negative clafer constraint

a
 xor b ?
  	 ##> d 
  	d 
  	e 




